--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="bower_components\boostrap\dist\css\bootstrap.css">
   <!-- Se agrega la libreria de Iconos -->
   <link rel="stylesheet" href="bower_components\fontawesome\web-fonts-with-css\css\fontawesome.css">
+  <!--Se agregan estilos personalizados -->
+  <link rel="stylesheet" href="css\styles.css">
     <title>Document</title>
 </head>
 <body>
 <!--aqui va la barra de navegación-->
-<nav class="navbar navbar-expand-md navbar-light fixed-top ">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark ">
   <a href="index.html" class="navbar-brand"> Logo de la compañia </a>
   <button class="navbar-toggler" data-toggle="collapse" data-target="#navegar">
     <span class="navbar-toggler-icon"></span>
@@ -31,6 +33,24 @@
     </ul>
   </div>
 </nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+        <h1>Featured Product </h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+      <div class="btn-group btn-group-lg">
+        <button class="btn btn-info">Buy Now!</button>
+        <button class="btn btn-default">Free Trail</button>
+      </div>
+      <p><a href="#">Read more about the product</a></p>
+    </div>
+    <div class="col-md-8 d-none d-sm-block">
+        <img src="img\1362430891_extras_noticia_foton_7_0.jpg" alt="" with="1050px" height="200px">
+    </div>
+  </div>
+  <hr>
+</div>
 
 
 
