--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -7,7 +7,7 @@
   <!-- Se agrega la libreria de boostrtap para el estilo -->
   <link rel="stylesheet" href="bower_components\boostrap\dist\css\bootstrap.css">
   <!-- Se agrega la libreria de Iconos -->
-  <link rel="stylesheet" href="bower_components\fontawesome\web-fonts-with-css\css\fontawesome.css">
+  <link rel="stylesheet" href="bower_components\fontawesome\web-fonts-with-css\css\fontawesome-all.css">
   <!--Se agregan estilos personalizados -->
   <link rel="stylesheet" href="css\styles.css">
     <title>Document</title>
@@ -50,7 +50,72 @@
     </div>
   </div>
   <hr>
+
+  <div class="row">
+      <div class="col-md-8">
+    <h3>The Company </h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab laborum animi, obcaecati earum, deserunt expedita. Facilis molestiae laborum molestias sit, quisquam excepturi aliquid dolorum numquam! Natus, fugiat suscipit fugit possimus nobis quaerat magni placeat voluptate adipisci deserunt, officia, iste tempora illo in expedita perferendis debitis veritatis quia. Et laborum labore id soluta animi odio temporibus, enim, rem quos, assumenda accusantium.</p>
+    </div>
+    <div class="col-md-4">
+      <p class="bg-light rounded lead text-center p-md-5 m-md-3"> Our Motto</p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <h3>Testimonials</h3>
+    <div class="col-md-12 text-center">
+      <div class="carousel slide"id="carouselTestimonions" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <blockquote class="blockquote">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                 Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
+                 <footer class="blockquote-footer">
+                   Julion Alvares
+                 </footer>
+            </blockquote> <!-- Para una nota -->
+              </div>
+              <div class="carousel-item">
+                <blockquote class="blockquote">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
+                     <footer class="blockquote-footer">
+                       El Komander
+                     </footer>
+                </blockquote> <!-- Para una nota -->
+                  </div>
+                  <div class="carousel-item">
+                    <blockquote class="blockquote">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                         Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
+                         <footer class="blockquote-footer">
+                          La Suricata
+                         </footer>
+                    </blockquote> <!-- Para una nota -->
+                      </div>
+        </div>
+        <!-- /.carousel-inner -->
+      </div>
+    </div>
+    <!-- /.col-md-12 text-center -->
+
+  </div>
+  <hr>
+  <div class="footer ">
+    <p class="text-center lead">
+      Wanna get in touch? Email us at geerardo300697@gmail.com
+    </p>
+    <hr>
+    <ul class="list-unstyled text-center">
+      <li class="list-inline-item"><a href=""><i class="fab fa-twitter fa-3x"></i></a></li>
+      <li class="list-inline-item"><a href=""><i class="fab fa-facebook-square fa-3x"></i></a></li>
+      <li class="list-inline-item"><a href=""><i class="fab fa-linkedin fa-3x"></i></a></li>
+    </ul>
+    <!-- /.list-unstyled -->
+  </div>
+  <!-- /.footer -->
 </div>
+
 
 
 
