--- a/ProjectTwo/about.html
+++ b/ProjectTwo/about.html
@@ -35,73 +35,34 @@
 </nav>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-4">
-        <h1>Featured Product </h1>
-        <p>Lorem ipsum dolor sit amet.</p>
-      <div class="btn-group btn-group-lg">
-        <button class="btn btn-info">Buy Now!</button>
-        <button class="btn btn-default">Free Trail</button>
-      </div>
-      <p><a href="#">Read more about the product</a></p>
-    </div>
-    <div class="col-md-8 d-none d-sm-block">
-        <img src="img\1362430891_extras_noticia_foton_7_0.jpg" alt="" with="1050px" height="200px">
-    </div>
-  </div>
+
   <hr>
 
-  <div class="row">
-      <div class="col-md-8">
-    <h3>The Company </h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab laborum animi, obcaecati earum, deserunt expedita. Facilis molestiae laborum molestias sit, quisquam excepturi aliquid dolorum numquam! Natus, fugiat suscipit fugit possimus nobis quaerat magni placeat voluptate adipisci deserunt, officia, iste tempora illo in expedita perferendis debitis veritatis quia. Et laborum labore id soluta animi odio temporibus, enim, rem quos, assumenda accusantium.</p>
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
+        <li class="breadcrumb-item"><a href="#"> About Us </a></li>
+      </ol>
+    </nav>
+    <div class="row">
+      <h2>About Us. <small class="text-muted">Who we are</small></h2>
     </div>
-    <div class="col-md-4">
-      <p class="bg-light rounded lead text-center p-md-5 m-md-3"> Our Motto</p>
-    </div>
+    <hr>
+<div class="row">
+  <div class="col-md-8">
+    <h3>The Company</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui totam, commodi, voluptatum sint quos sit praesentium non. Veniam quam laboriosam aspernatur possimus voluptatum amet minus, cumque facere repellendus sequi illo magni ipsa voluptatibus rerum, assumenda qui, beatae tempore odio at officia molestias iste. Nihil iusto quod et recusandae molestiae debitis!</p>
   </div>
-  <hr>
-  <div class="row">
-    <h3>Testimonials</h3>
-    <div class="col-md-12 text-center">
-      <div class="carousel slide"id="carouselTestimonions" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <blockquote class="blockquote">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                 Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                 <footer class="blockquote-footer">
-                   Julion Alvares
-                 </footer>
-            </blockquote> <!-- Para una nota -->
-              </div>
-              <div class="carousel-item">
-                <blockquote class="blockquote">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                     <footer class="blockquote-footer">
-                       El Komander
-                     </footer>
-                </blockquote> <!-- Para una nota -->
-                  </div>
-                  <div class="carousel-item">
-                    <blockquote class="blockquote">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                         Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                         <footer class="blockquote-footer">
-                          La Suricata
-                         </footer>
-                    </blockquote> <!-- Para una nota -->
-                      </div>
-        </div>
-        <!-- /.carousel-inner -->
-      </div>
-    </div>
-    <!-- /.col-md-12 text-center -->
+  <div class="col-md-4">
+    <p class="bg-light rounded lead text-center p-md-5 m-md-3">Our Motto</p>
+  </div>
+</div>
+<hr>
 
   </div>
-  <hr>
-  <div class="footer ">
+
+  <div class="footer col-md-12 ">
     <p class="text-center lead">
       Wanna get in touch? Email us at geerardo300697@gmail.com
     </p>
