--- a/ProjectTwo/products.html
+++ b/ProjectTwo/products.html
@@ -35,72 +35,60 @@
 </nav>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-4">
-        <h1>Featured Product </h1>
-        <p>Lorem ipsum dolor sit amet.</p>
-      <div class="btn-group btn-group-lg">
-        <button class="btn btn-info">Buy Now!</button>
-        <button class="btn btn-default">Free Trail</button>
-      </div>
-      <p><a href="#">Read more about the product</a></p>
-    </div>
-    <div class="col-md-8 d-none d-sm-block">
-        <img src="img\1362430891_extras_noticia_foton_7_0.jpg" alt="" with="1050px" height="200px">
-    </div>
-  </div>
-  <hr>
 
   <div class="row">
-      <div class="col-md-8">
-    <h3>The Company </h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab laborum animi, obcaecati earum, deserunt expedita. Facilis molestiae laborum molestias sit, quisquam excepturi aliquid dolorum numquam! Natus, fugiat suscipit fugit possimus nobis quaerat magni placeat voluptate adipisci deserunt, officia, iste tempora illo in expedita perferendis debitis veritatis quia. Et laborum labore id soluta animi odio temporibus, enim, rem quos, assumenda accusantium.</p>
-    </div>
-    <div class="col-md-4">
-      <p class="bg-light rounded lead text-center p-md-5 m-md-3"> Our Motto</p>
-    </div>
   </div>
-  <hr>
-  <div class="row">
-    <h3>Testimonials</h3>
-    <div class="col-md-12 text-center">
-      <div class="carousel slide"id="carouselTestimonions" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <blockquote class="blockquote">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                 Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                 <footer class="blockquote-footer">
-                   Julion Alvares
-                 </footer>
-            </blockquote> <!-- Para una nota -->
-              </div>
-              <div class="carousel-item">
-                <blockquote class="blockquote">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                     <footer class="blockquote-footer">
-                       El Komander
-                     </footer>
-                </blockquote> <!-- Para una nota -->
-                  </div>
-                  <div class="carousel-item">
-                    <blockquote class="blockquote">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                         Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                         <footer class="blockquote-footer">
-                          La Suricata
-                         </footer>
-                    </blockquote> <!-- Para una nota -->
-                      </div>
+
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html"> Home </a></li>
+        <li class="breadcrumb-item"><a href="#"> Products </a></li>
+      </ol>
+    </nav
+
+    <div class="row">
+      <h1>Products. <small class="text-muted"> We buil amazing stuff</small></h1>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="card col-md-4">
+        <img src="img\1.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-tittle">Product 1</h5>
+          <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Esse, dolores!</p>
+            <a href="product-single.html" class="btn btn-primary"> Ser mas chismoso...</a>
         </div>
-        <!-- /.carousel-inner -->
       </div>
+      <!-- /.card-col-md-4 -->
+      <div class="card col-md-4">
+        <img src="img\2.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-tittle">Product 2 </h5>
+          <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Esse, dolores!</p>
+            <a href="product-single.html" class="btn btn-primary"> Ser mas chismoso...</a>
+        </div>
+      </div>
+      <!-- /.card-col-md-4 -->
+      <div class="card col-md-4">
+        <img src="img\3.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-tittle">Product 3</h5>
+          <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Esse, dolores!</p>
+            <a href="product-single.html" class="btn btn-primary"> Ser mas chismoso...</a>
+        </div>
+      </div>
+      <!-- /.card-col-md-4 -->
     </div>
-    <!-- /.col-md-12 text-center -->
-
   </div>
-  <hr>
+  <br>
+
+
+
+
   <div class="footer ">
     <p class="text-center lead">
       Wanna get in touch? Email us at geerardo300697@gmail.com
