--- a/ProjectTwo/about.html
+++ b/ProjectTwo/about.html
@@ -59,7 +59,37 @@
   </div>
 </div>
 <hr>
+<div class="row">
+  <h2>The team</h2>
+</div>
+<div class="row">
 
+  <div class="card col-md-5 ">
+    <img src="img\demo-team-member.jpg" alt="" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-tittle">Abril Trinidad del Carmen Hernandez</h5>
+      <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Esse, dolores!</p>
+        <ul class="list-unstyled ">
+          <li class="list-inline-item"><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+          <li class="list-inline-item"><a href=""><i class="fab fa-facebook-square fa-2x"></i></a></li>
+        </ul>
+    </div>
+  </div>
+
+  <div class="card col-md-5 offset-md-2">
+    <img src="img\demo-team-member.jpg" alt="" class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-tittle"> Gerardo Aldahir Roman Arroyo</h5>
+      <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Esse, dolores!</p>
+        <ul class="list-unstyled ">
+          <li class="list-inline-item"><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+          <li class="list-inline-item"><a href=""><i class="fab fa-facebook-square fa-2x"></i></a></li>
+          </ul>
+    </div>
+  </div>
+</div>
   </div>
 
   <div class="footer col-md-12 ">
