--- a/ProjectTwo/product-single.html
+++ b/ProjectTwo/product-single.html
@@ -36,70 +36,50 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
-        <h1>Featured Product </h1>
-        <p>Lorem ipsum dolor sit amet.</p>
-      <div class="btn-group btn-group-lg">
-        <button class="btn btn-info">Buy Now!</button>
-        <button class="btn btn-default">Free Trail</button>
-      </div>
-      <p><a href="#">Read more about the product</a></p>
-    </div>
-    <div class="col-md-8 d-none d-sm-block">
-        <img src="img\1362430891_extras_noticia_foton_7_0.jpg" alt="" with="1050px" height="200px">
-    </div>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Product</a></li>
+      </ol>
+    </nav>
   </div>
-  <hr>
-
   <div class="row">
-      <div class="col-md-8">
-    <h3>The Company </h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab laborum animi, obcaecati earum, deserunt expedita. Facilis molestiae laborum molestias sit, quisquam excepturi aliquid dolorum numquam! Natus, fugiat suscipit fugit possimus nobis quaerat magni placeat voluptate adipisci deserunt, officia, iste tempora illo in expedita perferendis debitis veritatis quia. Et laborum labore id soluta animi odio temporibus, enim, rem quos, assumenda accusantium.</p>
-    </div>
-    <div class="col-md-4">
-      <p class="bg-light rounded lead text-center p-md-5 m-md-3"> Our Motto</p>
-    </div>
+    <H1>Products. <small class="text-muted">We build amazing stuff</small></H1>
   </div>
   <hr>
   <div class="row">
-    <h3>Testimonials</h3>
-    <div class="col-md-12 text-center">
-      <div class="carousel slide"id="carouselTestimonions" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <blockquote class="blockquote">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                 Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                 <footer class="blockquote-footer">
-                   Julion Alvares
-                 </footer>
-            </blockquote> <!-- Para una nota -->
-              </div>
-              <div class="carousel-item">
-                <blockquote class="blockquote">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                     Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                     <footer class="blockquote-footer">
-                       El Komander
-                     </footer>
-                </blockquote> <!-- Para una nota -->
-                  </div>
-                  <div class="carousel-item">
-                    <blockquote class="blockquote">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                         Eius esse, officiis provident harum libero dicta inventore? Fuga vero magnam, minima?</p>
-                         <footer class="blockquote-footer">
-                          La Suricata
-                         </footer>
-                    </blockquote> <!-- Para una nota -->
-                      </div>
-        </div>
-        <!-- /.carousel-inner -->
-      </div>
+    <div class="col-md-6">
+      <h2>Product One</h2>
+      <h4>This is an awesome product one description</h4>
     </div>
-    <!-- /.col-md-12 text-center -->
-
+    <div class="col-md-6">
+    <div class="btn-group d-flex justify-content-end">
+      <button class="btn btn-primary">Buy Now!</button>
+      <button class="btn btn-secondary">Free Trial</button>
+    </div>
+    </div>
   </div>
+
+  <div class="row">
+    <div class="carousel slide" id="carousel-product" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active"><img src="img\large1.jpg" alt="" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="img\large2.jpg" alt="" class="d-block w-100"></div>
+        <div class="carousel-item"><img src="img\large3.jpg" alt="" class="d-block w-100"></div>
+      </div>
+      <a href="#carousel-product" class="carousel-control-prev" data-slide="prev" role="button">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a href="#carousel-product" class="carousel-control-next" data-slide="next" role="button">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+      <a href="#carousel-product" class="carousel-control-next" data-slide="next" role="button">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+  </div>
+
+</div>
   <hr>
   <div class="footer ">
     <p class="text-center lead">
