--- a/Cordoba/products.html
+++ b/Cordoba/products.html
@@ -51,9 +51,8 @@
         <div class="card col-md-4">
           <img src="img\1.jpg" alt="" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-tittle">Product 1</h5>
-            <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Esse, dolores!</p>
+            <h5 class="card-tittle">Adidas</h5>
+            <p class="card-text text-justify">Los nuevos tacos adizeroTMf50 edición Messi   </p>
               <a href="product-single.html" class="btn btn-primary"> Ver más...</a>
           </div>
         </div>
@@ -61,9 +60,8 @@
         <div class="card col-md-4">
           <img src="img\4.jpg" alt="" class="card-img-top">
           <div class="card-body">
-            <h5 class="card-tittle">Product 2 </h5>
-            <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Esse, dolores!</p>
+            <h5 class="card-tittle">Nike </h5>
+            <p class="card-text text-justify">Zapatos de fútbol Nike Mercurial Victory VI DF FG Electric green-Black-Flash lime-White </p>
               <a href="product-single.html" class="btn btn-primary"> Ver más...</a>
           </div>
         </div>
@@ -72,9 +70,8 @@
         <div class="card col-md-4">
           <img src="img\3.jpg" alt="" class="card-img-top ">
           <div class="card-body">
-            <h5 class="card-tittle">Product 3</h5>
-            <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Esse, dolores!</p>
+            <h5 class="card-tittle">Nike</h5>
+            <p class="card-text text-justify">Nike Magista Obra II Academy DF FG, Negro y Anaranjado </p>
               <a href="product-single.html" class="btn btn-primary">Ver más...</a>
           </div>
         </div>
@@ -83,27 +80,24 @@
         <div class="card col-md-4">
           <img src="img\6.jpg" alt="" class="card-img-top ">
           <div class="card-body">
-            <h5 class="card-tittle">Product 3</h5>
-            <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Esse, dolores!</p>
+            <h5 class="card-tittle">Nike</h5>
+            <p class="card-text text-justify">Sudadera con capucha de Nike con un estilo suelto y desenfadado.</p>
               <a href="product-single.html" class="btn btn-primary">Ver más...</a>
           </div>
         </div>
         <div class="card col-md-4">
           <img src="img\7.jpg" alt="" class="card-img-top ">
           <div class="card-body">
-            <h5 class="card-tittle">Product 3</h5>
-            <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Esse, dolores!</p>
+            <h5 class="card-tittle">Joma</h5>
+            <p class="card-text text-justify">Sudadera con Capucha </p>
               <a href="product-single.html" class="btn btn-primary">Ver más...</a>
           </div>
         </div>
         <div class="card col-md-4">
           <img src="img\8.jpg" alt="" class="card-img-top ">
           <div class="card-body">
-            <h5 class="card-tittle">Product 3</h5>
-            <p class="card-text text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Esse, dolores!</p>
+            <h5 class="card-tittle">Adidas</h5>
+            <p class="card-text text-justify">Sudadera Adidas BOX AZ/BL-Azul</p>
               <a href="product-single.html" class="btn btn-primary">Ver más...</a>
           </div>
         </div>
