--- a/ProjectTwo/product-single.html
+++ b/ProjectTwo/product-single.html
@@ -62,10 +62,33 @@
 
   <div class="row">
     <div class="carousel slide" id="carousel-product" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-product" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-product" data-slide-to="1" ></li>
+        <li data-target="#carousel-product" data-slide-to="2" ></li>
+      </ol>
       <div class="carousel-inner">
-        <div class="carousel-item active"><img src="img\large1.jpg" alt="" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="img\large2.jpg" alt="" class="d-block w-100"></div>
-        <div class="carousel-item"><img src="img\large3.jpg" alt="" class="d-block w-100"></div>
+        <div class="carousel-item active"><img src="img\large1.jpg" alt="" class="d-block w-100">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Picture 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Quas veniam ipsa eaque magni excepturi eos!</p>
+          </div>
+        </div>
+        <div class="carousel-item"><img src="img\large2.jpg" alt="" class="d-block w-100">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Picture 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Quas veniam ipsa eaque magni excepturi eos!</p>
+          </div>
+      </div>
+        <div class="carousel-item"><img src="img\large3.jpg" alt="" class="d-block w-100">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Picture 3</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Quas veniam ipsa eaque magni excepturi eos!</p>
+          </div>
+        </div>
       </div>
       <a href="#carousel-product" class="carousel-control-prev" data-slide="prev" role="button">
         <span class="carousel-control-prev-icon"></span>
@@ -78,6 +101,37 @@
       </a>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-6">
+      <br>
+      <h2>Product</h2>
+      <p clas="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Voluptatum assumenda voluptatem molestiae nisi harum voluptate dignissimos animi quo
+        consequuntur velit sint impedit, ut voluptas eaque, nihil est a ipsum, eveniet.</p>
+    </div>
+    <div class="col-md-6">
+      <br>
+      <h2>Product Tesminonials</h2>
+      <blockquote class="blockquote text-justify">
+        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+           Vel, doloremque.</p>
+           <foorter class="blockquote-footer">Gerardo Román</foorter>
+      </blockquote>
+    </div>
+  </div>
+  <hr>
+    <div class="row">
+      <div class="d-flex mr-auto">
+        <button class="btn btn-outline-primary">
+          Previous produt
+        </button>
+      </div>
+      <div>
+        <button class="btn btn-outline-primary">
+          Next produt
+        </button>
+      </div>
+    </div>
 
 </div>
   <hr>
